# galyleo-extension

./: .copier-answers.yml  .foo.sh  .gitignore  .prettierignore  Dockerfile  LICENSE  README.md  RELEASE.md  Untitled.ipynb  build_test_docker_image.bat  build_test_docker_image.sh  config.yaml  install.json  package-lock.json  package.json  pyproject.toml  seaice.gd.json  setup-dev.txt  setup.py  start.bat  test_query.txt  tsconfig.json  untitled.gd.json
.Trash-1000/info/: untitled.gd 1.json.trashinfo  untitled.gd.json.trashinfo  untitled.gd.trashinfo  untitled1.gd.json.trashinfo  untitled2.gd.json.trashinfo
.devcontainer/: devcontainer.json  engageLively - Shortcut.lnk
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
docker-build/: Dockerfile  build.md  build_test_docker_image.bat  build_test_docker_image.sh  prepare-assets.sh
galyleo_extension/: __init__.py  document.py
jupyter-config/jupyter_server_config.d/: galyleo_extension.json
schema/: galyleo.json  plugin.json
src/: factory.ts  icon.ts  index.ts  manager.ts  model.ts  widget.tsx
src/__tests__/: galyleo_extension.spec.ts
testfiles/: test1-copy.gd.json  test1.gd.json  ufos.gd.json
tmp/: test_server_extension.py
ui-tests/: package.json
ui-tests/tests/: galyleo_extension.spec.ts
